MGS-1315, MGS-1316, MGS-1152 BUGS scrolltotop issue on iOS9 + fix scroll position issues on menu/search on mobile

--- a/resources/scss/components/_component.main-nav.scss
+++ b/resources/scss/components/_component.main-nav.scss
@@ -34,6 +34,7 @@ $main-nav__transition-timing: ease;
       list-style-type: none;
       margin: 0;
       position: fixed;
+      top: 75px;
       right: 0;
       z-index: 1001;
       padding: 24px 0 24px 15px;
