--- a/resources/scss/objects/_object.layers.scss
+++ b/resources/scss/objects/_object.layers.scss
@@ -28,7 +28,7 @@
   }
 
   &__content {
-    padding-top: 64px; // Height of the header + the border, at the min size
+    //padding-top: 68px;
   }
 
   &--open {
